# sqsh

./: .cproject  .gdb_history  .gdbinit  .project  AUTHORS  CHANGES  ChangeLog  INSTALL  INSTALL.md  Makefile  Makefile.in  README  README.md  ReleaseNotes  aclocal.m4  conf.sh  config.status  configure  configure.in  configure.new
.externalToolBuilders/: make.launch
autoconf/: install-man  mkinstalldirs
autom4te.cache/: output.0  requests  traces.0
contrib/: sqsh.spec
cygwin/: Makefile  Makefile-syb15  Makefile-syb15-x64  README  config.h  cygwin-syb15.sh  cygwin.sh  cygwin64-syb15.sh
doc/: CHANGES-2.1.6  CHANGES-2.1.7  CHANGES-2.1.8  CHANGES-2.1.9  CHANGES-2.2.0  CHANGES-2.3  CHANGES-2.4  FAQ  README.SGI  RELEASE  buildman.sh  global.sqshrc  more-advanced.sqshrc  sample.sqsh_m4  sample.sqshrc  sqsh.1  sqsh.html  sqsh.pod  sqshrc-2.1.8  sqshrc-2.1.9  sqshrc-2.2.0  sqshrc-2.4  sqshrc-2.5
doc/old/: Commands  FEATURES  IDEAS  OVERVIEW  README.SGI  RELEASE  advanced.sqshrc  sample.sqshrc
filters/: README  stats
scripts/: install.sh  install.sh.in  make_dist.sh  make_wrapper.sh  make_wrapper.sh.in  wrapper.sh.in
src/: Makefile  Makefile.in  alias.h  cmd.h  cmd_alias.c  cmd_bcp.c  cmd_buf.c  cmd_connect.c  cmd_do.c  cmd_echo.c  cmd_exit.c  cmd_for.c  cmd_func.c  cmd_go.c  cmd_help.c  cmd_history.c  cmd_if.c  cmd_input.c  cmd_input.h  cmd_jobs.c  cmd_kill.c  cmd_lock.c  cmd_loop.c  cmd_misc.c  cmd_misc.h  cmd_read.c  cmd_reconnect.c  cmd_redraw.c  cmd_reset.c  cmd_return.c  cmd_rpc.c  cmd_run.c  cmd_set.c  cmd_shell.c  cmd_show.c  cmd_sleep.c  cmd_wait.c  cmd_warranty.c  cmd_while.c  config.h  (+83 more)
src/sqsh_parser/: Makefile.in  sqsh_parser.c  sqsh_parser.h  tsql.c  tsql.h  tsql.l  tsql.y  tsql.yy.c
test/: dsp.sql  query.sql  test.sql  test2.sql  test3.sql
